# hermes

./: .env.dist  .gitignore  README.md  pyproject.toml
telegram/: bot.py
web/frontend/admin-panel/: README.md  package.json
web/frontend/admin-panel/src/: App.tsx  dataProvider.ts
